# SuperLega-Predictor

./: .gitignore  AGENTS.md  COMPARACION_ANTES_DESPUES.md  SIGUIENTE_SESION.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
DB/: Comparacion_equipos_10_años.csv  sets_partidos.csv
DB/enfrentamientos_directos/: enfrentamientos_directos_20202021.csv  enfrentamientos_directos_20212022.csv  limpiador.py  (+4 more)
docs/: COMPARACION_ANTES_DESPUES.md  PLAN_MEJORAS_CONSOLIDADO.md  PLAN_MEJORA_CLAMP.md  PLAN_MEJORA_PRECISION.md  SIGUIENTE_SESION.md
latex/: exploration_upv_structure.md  front_matter.tex  main.aux  main.bcf  main.blg  main.lof  main.lot  main.run.xml  main.tex  main.toc
memoria/: INDICE.md  benchmark.md  data_layer.md  marco_teorico.md  match_predictor.md  mejora_precision_2026-07.md  memoria_tfg.md  player_stats_generator.md  point_probability.md  prediccion_partidos.md  prediccion_temporadas.md  registro_historico_b0.md  set_predictor.md  simulator.md
models/: adaptive_damping_results.json  b4_blend_results.json  b5_churn_results.json  backtest_clamp_results.json  backtest_noise_floor.json  backtest_simulator_2024.json  backtest_simulator_2024_post_a8e89f0.json  backtest_simulator_2025.json  best_params.json  feature_selection_results.json  mc_season_validation.json  precision_baseline.json  precision_improved.json  tune_clamp_blend_results.json  tune_clamp_margin_results.json  tune_simulator_constants.json
src/: __init__.py
tests/: conftest.py  test_adoption_gate.py  test_api_validation.py  test_cross_temporal_check.py  test_data_pipeline.py  test_feature_builder.py  test_match_blend.py  test_models.py  test_precision_report.py  test_roster_continuity.py  test_season_simulator.py  test_set_contract.py  test_set_math.py  test_simulator.py  test_team_id_mapper.py  test_team_mapper.py  test_team_sideout.py
(+104 files in other folders)
