[project]
name = "predictor2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "pandas",
    "numpy",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests requiring real models/*.joblib + player_stats_params.json",
]
addopts = "-ra --strict-markers"
