[project]
name = "predictor2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "pandas",
    "numpy",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: integration tests requiring real models/*.joblib + player_stats_params.json",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
# El repo declara requires-python = ">=3.10"; el plan sugeria py312 por error.
target-version = "py310"
exclude = ["src/web", "latex", "memoria", "docs"]

[tool.ruff.lint]
# E402 (import no al principio del fichero): 104 avisos, TODOS falsos
# positivos contra una convencion deliberada del repo. Los modulos bajo src/
# llevan el boilerplate
#     BASE_DIR = Path(__file__).resolve().parent.parent.parent
#     sys.path.insert(0, str(BASE_DIR))
# ANTES de importar `src.*`, para poder ejecutarse con `python -m`. Mover esos
# imports arriba romperia el arranque. Es el Guardrail 7 del plan consolidado.
ignore = ["E402"]

[tool.black]
line-length = 100
target-version = ["py310"]
